<resources>
    <string name="already_have_an_account_sign_in">Already Have an account? Sign In</string>
    <string name="app_logo">App logo</string>
    <string name="app_name">ShopEase</string>
    <string name="company_name">Company Name</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="non_descriptive_image">Non descriptive image</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="send_otp">Send OTP</string>
    <string name="set_password">Set Password</string>
    <string name="shop_ease_logo_image">ShopEase Logo Image</string>
    <string name="shopping_made_easy">Shopping made Easy</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_profile">User Profile</string>
    <string name="disable_account">Disable Account</string>
    <string name="update">Update</string>
    <string name="search_products">Search Products</string>
    <string name="item_image">Item Image</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="ellipsis">…</string>
    <string name="enter_value">Enter value</string>
    <string name="profile_button">Profile Button</string>
    <string name="logout">Logout</string>
    <string name="settings_button">Settings Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="in_stock">In Stock</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart (%1$d)</string>
    <string name="available">Available: %1$d</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="pay_now">Pay Now</string>
    <string name="my_cart">My Cart</string>
    <string name="count">Count</string>
    <string name="add">Add</string>
</resources>