<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_title"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/company_name"
            app:srcCompat="@drawable/img_title" />

        <TextView
            android:id="@+id/txt_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_made_easy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/primary_darker" />

        <EditText
            android:id="@+id/edTxt_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="name"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/primary_darker" />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/already_have_an_account_sign_in" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo"
            android:paddingHorizontal="40dp"
            app:srcCompat="@drawable/img_logo" />
    </LinearLayout>
</ScrollView>
