<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="20dp"
    tools:context=".activity.ProfileActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_profile"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prof_edt_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/primary_darker"
        app:layout_constraintBottom_toTopOf="@+id/prof_edt_name"
        tools:layout_editor_absoluteX="39dp" />

    <EditText
        android:id="@+id/prof_edt_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/primary_darker"
        app:layout_constraintBottom_toTopOf="@+id/prof_btn_update"
        tools:layout_editor_absoluteX="47dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/non_descriptive_image"
        app:layout_constraintBottom_toTopOf="@+id/prof_edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/img_user" />




    <Button
        android:id="@+id/prof_btn_update"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@+id/prof_btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/prof_btn_logout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/background_border_btn"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/prof_btn_disable"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/prof_btn_disable"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/disable_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>