<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/prod_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            android:src="@drawable/background_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


    <TextView
        android:id="@+id/prod_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_50"
        android:padding="10dp"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prod_txt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="10dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/black_50"
        android:paddingHorizontal="10dp"
        android:id="@+id/prod_txt_category"
        android:paddingVertical="4dp"
        android:text="@string/category"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/prod_txt_price"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/prod_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prod_txt_price">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/prod_txt_description"
            android:text="@string/product_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/prod_bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/primary"
        >


        <TextView
            android:id="@+id/prod_txt_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/in_stock"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignBaseline="@id/prod_btn_add_cart"/>


        <Button
            android:id="@+id/prod_btn_add_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:background="@drawable/background_button"
            android:drawableStart="@drawable/icon_cart"
            android:drawablePadding="10dp"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/add_to_cart"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/prod_btn_cart"
        android:contentDescription="@string/shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary"
        android:src="@drawable/icon_cart"/>

</androidx.constraintlayout.widget.ConstraintLayout>
