<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="20dp"
    tools:context=".activity.UpdatePasswordActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/update_pass_edt_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textColorHint="@color/primary_darker"
        app:layout_constraintBottom_toTopOf="@+id/update_pass_edt_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/update_pass_edt_confirm_password"
        android:layout_width="0dp"
        android:maxWidth="480dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="password"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/primary_darker"
        app:layout_constraintBottom_toTopOf="@+id/update_pass_btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:contentDescription="@string/non_descriptive_image"
        app:layout_constraintBottom_toTopOf="@+id/update_pass_edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/img_pass" />

    <Button
        android:id="@+id/update_pass_btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>