<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:cardBackgroundColor="@color/primary_light"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/cartItem_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/white"
            android:id="@+id/cardItem_txt_price"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cartItem_txt_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/cardItem_txt_count"
            android:gravity="center"
            android:text="@string/count"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cardItem_btn_subtract"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cardItem_btn_subtract"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_circle"
            android:contentDescription="@string/add"
            android:src="@drawable/icon_dash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cardItem_btn_add"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cardItem_btn_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_circle"
            android:contentDescription="@string/add"
            android:src="@drawable/icon_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>