<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="20dp"
    tools:context=".activity.MainActivity">

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="0dp"
        app:layout_constraintEnd_toStartOf="@id/main_btn_cart"
        android:layout_height="50dp"
        android:autofillHints="search"
        android:background="@color/white"
        android:drawableStart="@drawable/icon_search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/search_products"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:contentDescription="@string/shopping_cart"
        android:layout_width="50dp"
        android:id="@+id/main_btn_cart"
        android:layout_height="50dp"
        android:src="@drawable/icon_cart"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_button"
        app:layout_constraintEnd_toStartOf="@id/btn_profile"
        />

    <ImageButton
        android:contentDescription="@string/profile_button"
        android:layout_width="50dp"
        android:id="@+id/btn_profile"
        android:layout_height="50dp"
        android:src="@drawable/icon_profile"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edt_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/rv_categories"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>